<resources>
    <string name="app_name">Calculator</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnZero">0</string>
    <string name="btnClear">C</string>
    <string name="btnEqual">=</string>
    <string name="btnParentheses">()</string>
    <string name="btnSubtract">-</string>
    <string name="btnPercent">%</string>
    <string name="btnAdd">+</string>
    <string name="btnDivide">/</string>
    <string name="btnMultiply">*</string>
    <string name="btnSign">+/-</string>
    <string name="btnDecimal">.</string>
    <string name="btnSin">sin</string>
    <string name="btnCos">cos</string>
    <string name="btnTan">tan</string>
    <string name="btnLn">ln</string>
    <string name="btnLog">log</string>
</resources>
